--- a/style.css
+++ b/style.css
@@ -106,25 +106,28 @@ ol {
 
 .logo-head {
     font-family: "Raleway", sans-serif;
-    font-size: 18px;
+    font-size: 30px;
     font-weight: 700;
     line-height: 21px;
     letter-spacing: 0.03em;
     text-align: left;
     font-optical-sizing: auto;
     line-height: 1.17;
-    color: #4d5ae5;
+    color:#fff;
     text-transform: uppercase;
     display: flex;
     padding: 17px 0;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 1);
+        
 }
 .logo-head-second {
-    color: #2e2f42;
+    color: #fff;
+    margin-left: 12px;
 }
         .head-page {
             display: flex;
-            gap: 40px;
-            margin-left: 40px;
+            gap: 80px;
+            margin-left: 360px;
         }
                         .addres-class {
                             font-style: normal;
@@ -133,7 +136,7 @@ ol {
                         }
 .head-page .link-head {
     font-family: "Roboto" sans-serif;
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.02em;
@@ -156,8 +159,46 @@ ol {
                     display: flex;
                     margin: 0 auto;
                     justify-content: space-between;
+                    padding-left: 320px;
                 }
 .nav-style {
     display: flex;
     align-items: center;
+}
+.button-burgers {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    background-color: darkblue;
+    color: #FFFFFF;
+    border-color: #4D5AE5;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    margin-left: 50px;
+    position: relative;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-drinks {
+    font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        background-color: darkblue;
+        color: #FFFFFF;
+        border-color: #4D5AE5;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        cursor: pointer;
+        display: block;
+        min-width: 169px;
+        height: 56px;
+        border: none;
+        border-radius: 4px;
+        position: relative;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
