--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ a {
     /* Отправляем на задний план */
     background: no-repeat;
     background-size: cover;
+    
 }
 
 video {
@@ -45,12 +46,13 @@ video {
     justify-content: center;
     align-items: center;
     color: white;
+    z-index: -1000;
 }
 
 .header-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+   
     
 }
 .header-styles {
@@ -118,6 +120,7 @@ ol {
     display: flex;
     padding: 17px 0;
     text-shadow: 4px 4px 2px rgba(0, 0, 0, 1);
+    margin-left: 40px;
         
 }
 .logo-head-second {
@@ -157,9 +160,9 @@ ol {
         }
                 .header-styles .container {
                     display: flex;
-                    margin: 0 auto;
-                    justify-content: space-between;
-                    padding-left: 320px;
+                   
+                 
+                    
                 }
 .nav-style {
     display: flex;
@@ -201,4 +204,54 @@ ol {
         border-radius: 4px;
         position: relative;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        margin-left: 20px;
+}
+
+
+
+
+
+/* Стили для модального окна */
+.modal {
+    display: none;
+    /* Скрыто по умолчанию */
+    position: fixed;
+    /* Фиксированное позиционирование */
+    z-index: 1;
+    /* Сидит поверх всего */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Ширина на весь экран */
+    height: 100%;
+    /* Высота на весь экран */
+    overflow: auto;
+    /* Включить прокрутку, если нужно */
+    background-color: rgb(0, 0, 0);
+    /* Цвет фона */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Черный с непрозрачностью */
+}
+
+/* Стили контента модального окна */
+.modal-content {
+   margin-top: 200px;
+   margin-left: 250px;
+    width: 80%;
+    /* Можете изменить ширину */
+}
+
+/* Кнопка закрыть (x) */
+/* .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+} */
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
